[package]
name = "treewalker"
version = "0.1.0"
authors = ["Vesa Vilhonen <vesa@vilhonen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = {version = "0.2", features=["full"]}